Fixed wrong font in bold for iOS8

--- a/frontend/core/src/main/webapp/landing/css/em-animation.css
+++ b/frontend/core/src/main/webapp/landing/css/em-animation.css
@@ -30,9 +30,13 @@
   display: table-cell;
   vertical-align: middle;
   text-align: center;
-  font-size: 15px;
+  font-size: 14px;
   padding-left: 28px;
   padding-right: 28px;
+}
+
+#em-animation b {
+  font-family: 'HelveticaNeue','Helvetica Neue','Segoe UI Bold','Segoe UI','sans-serif';
 }
 
 #em-animation-0 {
